RAD-29 - Study.mwlStatus not type safe
* add MwlStatus enum
* remove magic numbers
* store Study.mwlStatus state via enum element name in database
* add enum element names in properties files for internationalization

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -103,3 +103,17 @@
 @MODULE_ID@.mwl=MWL entries in: 
 @MODULE_ID@.mpps=MPPS entries in: 
 @MODULE_ID@.storage=DICOM image objects in: 
+
+@MODULE_ID@.DEFAULT=Default
+@MODULE_ID@.SAVE_OK=In Sync : Save order successful.
+@MODULE_ID@.SAVE_ERR=Out of Sync : Save order failed. Try Again!
+@MODULE_ID@.UPDATE_OK=In Sync : Update order successful.
+@MODULE_ID@.UPDATE_ERR=Out of Sync : Update order failed. Try again!
+@MODULE_ID@.VOID_OK=In Sync : Void order successful.
+@MODULE_ID@.VOID_ERR=Out of Sync : Void order failed. Try again!
+@MODULE_ID@.DISCONTINUE_OK=In Sync : Discontinue order successful.
+@MODULE_ID@.DISCONTINUE_ERR=Out of Sync : Discontinue order failed. Try again!
+@MODULE_ID@.UNDISCONTINUE_OK=In Sync : Undiscontinue order successful.
+@MODULE_ID@.UNDISCONTINUE_ERR=Out of Sync : Undiscontinue order failed. Try again!
+@MODULE_ID@.UNVOID_OK=In Sync :  Unvoid order successfull
+@MODULE_ID@.UNVOID_ERR=Out of Sync :  Unvoid order failed. Try again!
