RAD-60 Re-engineer installation of roles and privileges * add metadatadeploy-api dependency to api * add metadatasharing-api dependency to api * add RadiologyRolePrivilegeMetadata.java * delete system developer mode functionality * delete dummy user functionality

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -68,11 +68,10 @@
 @MODULE_ID@.init=Initialize
 @MODULE_ID@.previousObs=Previous Observations
 @MODULE_ID@.config=Configuration and initialization
-@MODULE_ID@.createTypeAndRoles=Create radiology order type and roles required by the module (Optional)
+@MODULE_ID@.createType=Create radiology order type required by the module (Optional)
 @MODULE_ID@.successConfig=Successfully done!
-@MODULE_ID@.failConfig=Type and Roles have been Initialized by Module Startup. Check "Manage Roles" and "Manage Order Types" to confirm if setup has gone through successfully. If not present, see server console for more information.
+@MODULE_ID@.failConfig=Type have been Initialized by Module Startup. Check "Manage Order Types" to confirm if setup has gone through successfully. If not present, see server console for more information.
 @MODULE_ID@.minChars=Minimum 3 Chars
-@MODULE_ID@.dummyUsers=Create dummy users (Optional)
 @MODULE_ID@.studyPerformed=Study already performed!
 @MODULE_ID@.studyResults=Study Results
 @MODULE_ID@.xebraConfig=Xebra WADO Server initialization
