--- a/omod/src/main/resources/messages_es.properties
+++ b/omod/src/main/resources/messages_es.properties
@@ -66,11 +66,10 @@
 @MODULE_ID@.init=Inicializar
 @MODULE_ID@.previousObs=Observaciones Anteriores
 @MODULE_ID@.config=Configuraci&oacute;n e inicializaci&oacute;n
-@MODULE_ID@.createTypeAndRoles=Crear tipo de orden y roles requirdos por el modulo
+@MODULE_ID@.createType=Crear radiología tipo de orden requerido por el módulo ( Opcional)
 @MODULE_ID@.successConfig=Concluido satisfatoriamente!
 @MODULE_ID@.failConfig=Error al procesar la orden, vea la consola del servidor para mas informaci&oacute;n
 @MODULE_ID@.minChars=Minimo 3 Letras
-@MODULE_ID@.dummyUsers=Crear usuarios de prueba (Opcional)
 @MODULE_ID@.studyPerformed=Estudio ya realizado!
 @MODULE_ID@.studyResults=Resultados del estudio
 @MODULE_ID@.xebraConfig=Inicializaci&oacute;n del servidor WADO (Xebra)
