RAD-65 Refactor PortletsController Including Tests

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -6,6 +6,7 @@
 @MODULE_ID@.imageViewer=Image Viewer
 
 @MODULE_ID@.searchOrder=Search Order
+@MODULE_ID@.OrderListEmpty=Currently, there are no Radiology Orders
 @MODULE_ID@.startDate=Start Date
 @MODULE_ID@.endDate=End Date
 @MODULE_ID@.find=Find
