--- a/omod/src/main/resources/messages_es.properties
+++ b/omod/src/main/resources/messages_es.properties
@@ -6,6 +6,7 @@
 @MODULE_ID@.imageViewer= Visor de Im&aacute;genes
 
 @MODULE_ID@.searchOrder=Buscar Orden
+@MODULE_ID@.OrderListEmpty=Actualmente, no hay Ordenes de Radiología
 @MODULE_ID@.startDate=Fecha Inicial
 @MODULE_ID@.endDate=Fecha Final
 @MODULE_ID@.find=Encontrar
