RAD-60 Re-engineer installation of roles and privileges

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -29,7 +29,7 @@
 @MODULE_ID@.patientFullName=Patient Full Name
 @MODULE_ID@.referringPhysician=Referring Physician
 @MODULE_ID@.scheduler=Scheduler
-@MODULE_ID@.performingPhysician=Performing Technician
+@MODULE_ID@.performingPhysician=Performing Physician
 @MODULE_ID@.readingPhysician=Reading Physician
 @MODULE_ID@.appoinmentTime=Appointment Time
 @MODULE_ID@.appoinmentDate=Order Start Date
@@ -69,11 +69,10 @@
 @MODULE_ID@.init=Initialize
 @MODULE_ID@.previousObs=Previous Observations
 @MODULE_ID@.config=Configuration and initialization
-@MODULE_ID@.createTypeAndRoles=Create radiology order type and roles required by the module (Optional)
+@MODULE_ID@.createRadiologyOrderType=Create radiology order type required by the module (Optional)
 @MODULE_ID@.successConfig=Successfully done!
-@MODULE_ID@.failConfig=Type and Roles have been Initialized by Module Startup. Check "Manage Roles" and "Manage Order Types" to confirm if setup has gone through successfully. If not present, see server console for more information.
+@MODULE_ID@.failConfig=Order type for radiology has been initialized at module startup. Check "Manage Order Types" to confirm if setup has gone through successfully. If not present, see server console for more information.
 @MODULE_ID@.minChars=Minimum 3 Chars
-@MODULE_ID@.dummyUsers=Create dummy users (Optional)
 @MODULE_ID@.studyPerformed=Study already performed!
 @MODULE_ID@.studyResults=Study Results
 @MODULE_ID@.xebraConfig=Xebra WADO Server initialization
