--- a/omod/src/main/resources/messages_es.properties
+++ b/omod/src/main/resources/messages_es.properties
@@ -29,7 +29,7 @@
 @MODULE_ID@.patientFullName=Nombre del Paciente
 @MODULE_ID@.referringPhysician=Remitente
 @MODULE_ID@.scheduler=Planificador
-@MODULE_ID@.performingPhysician=Tecnico
+@MODULE_ID@.performingPhysician=médico que realiza
 @MODULE_ID@.readingPhysician=Examinador
 @MODULE_ID@.appoinmentTime=Hora de la Cita
 @MODULE_ID@.appoinmentDate=Fecha de la Cita
@@ -67,11 +67,10 @@
 @MODULE_ID@.init=Inicializar
 @MODULE_ID@.previousObs=Observaciones Anteriores
 @MODULE_ID@.config=Configuraci&oacute;n e inicializaci&oacute;n
-@MODULE_ID@.createTypeAndRoles=Crear tipo de orden y roles requirdos por el modulo
+@MODULE_ID@.createRadiologyOrderType=Crear radiología tipo de orden requerido por el módulo ( Opcional)
 @MODULE_ID@.successConfig=Concluido satisfatoriamente!
 @MODULE_ID@.failConfig=Error al procesar la orden, vea la consola del servidor para mas informaci&oacute;n
 @MODULE_ID@.minChars=Minimo 3 Letras
-@MODULE_ID@.dummyUsers=Crear usuarios de prueba (Opcional)
 @MODULE_ID@.studyPerformed=Estudio ya realizado!
 @MODULE_ID@.studyResults=Resultados del estudio
 @MODULE_ID@.xebraConfig=Inicializaci&oacute;n del servidor WADO (Xebra)
