RAD-86 fix NullPointerException in RadiologyOrderFormController

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -36,6 +36,7 @@
 @MODULE_ID@.modality=Modality
 @MODULE_ID@.status=Status
 @MODULE_ID@.crossDate=Start date is more recent than end date!
+@MODULE_ID@.privilegesRequired=Privileges required: {0}
 @MODULE_ID@.mwlStatus=DCM4CHEE Modality Worklist Sync Status
 
 @MODULE_ID@.createOrder=Create Order
