--- a/omod/src/main/resources/messages_es.properties
+++ b/omod/src/main/resources/messages_es.properties
@@ -36,6 +36,7 @@
 @MODULE_ID@.modality=Modalidad
 @MODULE_ID@.status=Estado
 @MODULE_ID@.crossDate=La fecha final es m&aacute;s reciente que la fecha final! 
+@MODULE_ID@.privilegesRequired=Privilegios necesarios: {0}
 
 @MODULE_ID@.createOrder=Crear Orden
 @MODULE_ID@.patient=Paciente
