RAD-89 Upgrade core dependency to 1.10.2
* upgrade openmrs-core dependency to 1.10.2
* use new Order Entry API orderService.saveOrder in RadiologyService
* remove Study.priority in favor of new Order.urgency
* add global property for CareSetting
* add EncounterRole and Type for RadiologyOrder via liquibase
* remove all Study members of type User
* use new Order.orderNumber in HL7 ORM message as placerNumber
* add ProviderEditor
* add RadiologyOrderValidator

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -6,7 +6,11 @@
 @MODULE_ID@.imageViewer=Image Viewer
 
 @MODULE_ID@.searchOrder=Search Order
+@MODULE_ID@.discontinuedOrder=Discontinued Order
 @MODULE_ID@.OrderListEmpty=Currently, there are no Radiology Orders
+@MODULE_ID@.scheduledDate=Scheduled Date
+@MODULE_ID@.stopDate=Stop Date
+@MODULE_ID@.dateActivated=Date Activated
 @MODULE_ID@.startDate=Start Date
 @MODULE_ID@.endDate=End Date
 @MODULE_ID@.find=Find
@@ -48,7 +52,7 @@
 @MODULE_ID@.comments=Comments
 @MODULE_ID@.preferredDate=Preferred Date
 @MODULE_ID@.bodyPart=Body Part
-@MODULE_ID@.priority=Priority
+@MODULE_ID@.urgency=Urgency
 @MODULE_ID@.routine=Routine
 @MODULE_ID@.urgent=Urgent/Stat
 @MODULE_ID@.contrast=Contrast
