--- a/omod/src/main/resources/messages_es.properties
+++ b/omod/src/main/resources/messages_es.properties
@@ -6,7 +6,11 @@
 @MODULE_ID@.imageViewer= Visor de Im&aacute;genes
 
 @MODULE_ID@.searchOrder=Buscar Orden
+@MODULE_ID@.discontinuedOrder=Orden suspendido
 @MODULE_ID@.OrderListEmpty=Actualmente, no hay Ordenes de Radiología
+@MODULE_ID@.scheduledDate=Fecha Planificado
+@MODULE_ID@.stopDate=Fecha Final
+@MODULE_ID@.dateActivated=Fecha Activado
 @MODULE_ID@.startDate=Fecha Inicial
 @MODULE_ID@.endDate=Fecha Final
 @MODULE_ID@.find=Encontrar
@@ -46,7 +50,7 @@
 @MODULE_ID@.comments=Comentarios
 @MODULE_ID@.preferredDate=Fecha Preferida
 @MODULE_ID@.bodyPart=Parte del Cuerpo
-@MODULE_ID@.priority=Prioridad
+@MODULE_ID@.urgency=Urgencia
 @MODULE_ID@.routine=Rutina
 @MODULE_ID@.urgent=Urgente
 @MODULE_ID@.contrast=Contraste
