RAD-116 - Create radiology report

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -1,6 +1,5 @@
 @MODULE_ID@.title=Radiology Module
 @MODULE_ID@.manageOrders=Manage Radiology Orders
-@MODULE_ID@.manageReports=Manage Radiology Reports
 @MODULE_ID@.addOrder=Add Radiology Order
 @MODULE_ID@.configureDevices=Configure Devices
 @MODULE_ID@.imageViewer=Image Viewer
@@ -46,7 +45,6 @@
 @MODULE_ID@.notSpecified=Not Specified
 @MODULE_ID@.procedureRequested=Procedure Requested
 
-@MODULE_ID@.radiologyObservations=Radiology : Order Observations
 @MODULE_ID@.patientOverview=Patient Overview
 @MODULE_ID@.moreInfo=More Information
 @MODULE_ID@.comments=Comments
@@ -67,7 +65,6 @@
 @MODULE_ID@.priority=Priority
 @MODULE_ID@.scheduledStatus=Scheduled status
 @MODULE_ID@.performedStatus=Performed status
-@MODULE_ID@.previousObs=Previous Observations
 @MODULE_ID@.minChars=Minimum 3 Chars
 @MODULE_ID@.studyPerformed=Study already performed!
 @MODULE_ID@.studyResults=Study Results
@@ -109,3 +106,16 @@
 @MODULE_ID@.UNDISCONTINUE_ERR=Out of Sync : Undiscontinue order failed. Try again!
 @MODULE_ID@.UNVOID_OK=In Sync :  Unvoid order successfull
 @MODULE_ID@.UNVOID_ERR=Out of Sync :  Unvoid order failed. Try again!
+
+@MODULE_ID@.radiologyReportTitle=Report
+@MODULE_ID@.radiologyReportId=Id
+@MODULE_ID@.reportStatus=Status
+@MODULE_ID@.radiologyReportDiagnosis=Diagnosis
+@MODULE_ID@.radiologyReportProvider=Results Interpreter
+@MODULE_ID@.radiologyReportDate=Completion Date
+@MODULE_ID@.radiologyReportClaim=Claim Report
+@MODULE_ID@.radiologyReportUnclaim=Unclaim
+@MODULE_ID@.radiologyReportSave=Save as Draft
+@MODULE_ID@.radiologyReportComplete=Save & Complete
+@MODULE_ID@.radiologyReportResume=Resume work on Report
+@MODULE_ID@.radiologyReportShow=Show completed Report
