RAD-158 message_es.properties not in utf8
converted the file from ansi to utf8

--- a/omod/src/main/resources/messages_es.properties
+++ b/omod/src/main/resources/messages_es.properties
@@ -7,7 +7,7 @@
 
 @MODULE_ID@.searchOrder=Buscar Orden
 @MODULE_ID@.discontinuedOrder=Orden suspendido
-@MODULE_ID@.OrderListEmpty=Actualmente, no hay Ordenes de Radiología
+@MODULE_ID@.OrderListEmpty=Actualmente, no hay Ordenes de RadiologÃ­a
 @MODULE_ID@.scheduledDate=Fecha Planificado
 @MODULE_ID@.stopDate=Fecha Final
 @MODULE_ID@.dateActivated=Fecha Activado
@@ -31,7 +31,7 @@
 @MODULE_ID@.patientFullName=Nombre del Paciente
 @MODULE_ID@.referringPhysician=Remitente
 @MODULE_ID@.scheduler=Planificador
-@MODULE_ID@.performingPhysician=médico que realiza
+@MODULE_ID@.performingPhysician=mÃ©dico que realiza
 @MODULE_ID@.readingPhysician=Examinador
 @MODULE_ID@.appoinmentTime=Hora de la Cita
 @MODULE_ID@.appoinmentDate=Fecha de la Cita
