RAD-115 Show radiology orders ready for reporting:
- updated js DataTables to version 1.10.11
- added jquery.dataTables.min.css for cleaner style of datatables
- use child rows to show not so important information (DCM4CHE Status, etc...) only when clicking on the row
- add drop down on order list page to filter for reported/non reported orders
- removed colvis

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -119,3 +119,7 @@
 @MODULE_ID@.radiologyReportComplete=Save & Complete
 @MODULE_ID@.radiologyReportResume=Resume work on Report
 @MODULE_ID@.radiologyReportShow=Show completed Report
+
+@MODULE_ID@.showOrdersWithoutAReport=Show Orders without a Report
+@MODULE_ID@.showOrdersWithAReport=Show Orders with a Report
+@MODULE_ID@.showAllOrders=Show all Orders
