RAD-143 Harmonize radiologyOrderForm look
* add patient header and boxes in radiologyOrderForm
* adapt comments in radiologyOrderForm
* rename related concepts to imaging procedure
* fix overwritten "general.id" in radiologyOrderForm's and radiologyReportForm
* add radiology.radiologyOrder message property and use it
as title for RadiologyOrder's in radiologyOrderForm.jsp

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -1,8 +1,10 @@
 @MODULE_ID@.title=Radiology Module
 @MODULE_ID@.manageOrders=Manage Radiology Orders
+@MODULE_ID@.radiologyOrder=Radiology Order
 @MODULE_ID@.addOrder=Add Radiology Order
 @MODULE_ID@.configureDevices=Configure Devices
 @MODULE_ID@.imageViewer=Image Viewer
+@MODULE_ID@.imagingProcedure=Imaging Procedure
 
 @MODULE_ID@.searchOrder=Search Order
 @MODULE_ID@.discontinuedOrder=Discontinued Order
