--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 @MODULE_ID@.title=Radiology Module
 @MODULE_ID@.manageOrders=Manage Radiology Orders
 @MODULE_ID@.radiologyOrder=Radiology Order
+@MODULE_ID@.radiologyOrders=Radiology Orders
 @MODULE_ID@.addOrder=Add Radiology Order
 @MODULE_ID@.configureDevices=Configure Devices
 @MODULE_ID@.imageViewer=Image Viewer
