RAD-183 Translate urgency, performed, scheduled status
Add translations where missing and use existing ones for urgency, performed,
scheduled status in lists and create form

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -78,24 +78,25 @@
 @MODULE_ID@.performed=Performed
 @MODULE_ID@.failWorklist= Failed sending request to dcm4chee. Check if dcm4chee server is online or check if the correct ip address for dcm4chee has been set.
 @MODULE_ID@.savedFailWorklist= Order Saved in OpenMRS but failed sending request to dcm4chee. Check if dcm4chee server is online or check if the correct ip address for dcm4chee has been set.
-# Statuses
+
+# Urgency
+@MODULE_ID@.ROUTINE=Routine
+@MODULE_ID@.STAT=Emergency
+@MODULE_ID@.ON_SCHEDULED_DATE=On scheduled date
+
+# Scheduled Status
 @MODULE_ID@.SCHEDULED=SCHEDULED
 @MODULE_ID@.ARRIVED=ARRIVED
 @MODULE_ID@.READY=READY
 @MODULE_ID@.STARTED=STARTED
 @MODULE_ID@.DEPARTED=DEPARTED
 
+# Performed Status
 @MODULE_ID@.IN_PROGRESS=IN PROGRESS
 @MODULE_ID@.DISCONTINUED=DISCONTINUED
 @MODULE_ID@.COMPLETED=COMPLETED
 
-# Priorities
-@MODULE_ID@.STAT=STAT
-@MODULE_ID@.HIGH=HIGH
-@MODULE_ID@.ROUTINE=ROUTINE
-@MODULE_ID@.MEDIUM=MEDIUM
-@MODULE_ID@.LOW=LOW
-
+# Mwl Sync Status
 @MODULE_ID@.DEFAULT=Default
 @MODULE_ID@.SAVE_OK=In Sync : Save order successful.
 @MODULE_ID@.SAVE_ERR=Out of Sync : Save order failed. Try Again!
