RAD-198 Reduce OrderRequest and MwlStatus
* remove non supported OrderRequest, keep only supported Save/Discontinue_Order
* change MwlStatus to only IN_SYNC and OUT_OF_SYNC
since all other MwlStatus do not give us additional information and just clutter
the code. by default a study is OUT_OF_SYNC since it is created in the
radiology module but not yet in the PACS DICOM MWL. once the hl7 order message
has been sent and the sending was successful we set the status to IN_SYNC.
* update message.properties for MwlStatus and change dcm4chee into PACS since
we are not bound to dcm4chee as PACS

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -41,7 +41,7 @@
 @MODULE_ID@.status=Status
 @MODULE_ID@.crossDate=Start date is more recent than end date!
 @MODULE_ID@.privilegesRequired=Privileges required: {0}
-@MODULE_ID@.mwlStatus=DCM4CHEE Modality Worklist Sync Status
+@MODULE_ID@.mwlStatus=PACS Modality Worklist Sync Status
 
 @MODULE_ID@.createOrder=Create Order
 @MODULE_ID@.patient=Patient
@@ -76,8 +76,8 @@
 @MODULE_ID@.createSCP=Create SCP
 @MODULE_ID@.scheduled=Scheduled
 @MODULE_ID@.performed=Performed
-@MODULE_ID@.failWorklist= Failed sending request to dcm4chee. Check if dcm4chee server is online or check if the correct ip address for dcm4chee has been set.
-@MODULE_ID@.savedFailWorklist= Order Saved in OpenMRS but failed sending request to dcm4chee. Check if dcm4chee server is online or check if the correct ip address for dcm4chee has been set.
+@MODULE_ID@.failWorklist= Failed sending order request to the PACS. Check if the PACS is online or if IP address, HL7 port have been set correctly.
+@MODULE_ID@.savedFailWorklist= Order Saved in OpenMRS but failed sending order request to the PACS. Check if the PACS is online or if IP address, HL7 port have been set correctly.
 
 # Urgency
 @MODULE_ID@.ROUTINE=Routine
@@ -97,19 +97,8 @@
 @MODULE_ID@.COMPLETED=COMPLETED
 
 # Mwl Sync Status
-@MODULE_ID@.DEFAULT=Default
-@MODULE_ID@.SAVE_OK=In Sync : Save order successful.
-@MODULE_ID@.SAVE_ERR=Out of Sync : Save order failed. Try Again!
-@MODULE_ID@.UPDATE_OK=In Sync : Update order successful.
-@MODULE_ID@.UPDATE_ERR=Out of Sync : Update order failed. Try again!
-@MODULE_ID@.VOID_OK=In Sync : Void order successful.
-@MODULE_ID@.VOID_ERR=Out of Sync : Void order failed. Try again!
-@MODULE_ID@.DISCONTINUE_OK=In Sync : Discontinue order successful.
-@MODULE_ID@.DISCONTINUE_ERR=Out of Sync : Discontinue order failed. Try again!
-@MODULE_ID@.UNDISCONTINUE_OK=In Sync : Undiscontinue order successful.
-@MODULE_ID@.UNDISCONTINUE_ERR=Out of Sync : Undiscontinue order failed. Try again!
-@MODULE_ID@.UNVOID_OK=In Sync :  Unvoid order successfull
-@MODULE_ID@.UNVOID_ERR=Out of Sync :  Unvoid order failed. Try again!
+@MODULE_ID@.IN_SYNC=In Sync
+@MODULE_ID@.OUT_OF_SYNC=Out of Sync
 
 @MODULE_ID@.radiologyReportTitle=Report
 @MODULE_ID@.radiologyReportId=Id
