RAD-193 Highlight discontinued order in radiologyOrderForm

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -9,6 +9,7 @@
 
 @MODULE_ID@.searchOrder=Search Order
 @MODULE_ID@.discontinuedOrder=Discontinued Order
+@MODULE_ID@.isNotActiveOrder=This order is not active.
 @MODULE_ID@.OrderListEmpty=Currently, there are no Radiology Orders
 @MODULE_ID@.scheduledDate=Scheduled Date
 @MODULE_ID@.stopDate=Stop Date
