--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -1,105 +1,45 @@
-@MODULE_ID@.title=Radiology Module
 @MODULE_ID@.manageOrders=Manage Radiology Orders
-@MODULE_ID@.radiologyOrder=Radiology Order
-@MODULE_ID@.radiologyOrders=Radiology Orders
 @MODULE_ID@.addOrder=Add Radiology Order
-@MODULE_ID@.configureDevices=Configure Devices
-@MODULE_ID@.imageViewer=Image Viewer
-@MODULE_ID@.imagingProcedure=Imaging Procedure
 
-@MODULE_ID@.searchOrder=Search Order
+
 @MODULE_ID@.discontinuedOrder=Discontinued Order
-@MODULE_ID@.isNotActiveOrder=This order is not active.
 @MODULE_ID@.OrderListEmpty=Currently, there are no Radiology Orders
 @MODULE_ID@.scheduledDate=Scheduled Date
 @MODULE_ID@.stopDate=Stop Date
-@MODULE_ID@.dateActivated=Date Activated
 @MODULE_ID@.startDate=Start Date
 @MODULE_ID@.endDate=End Date
 @MODULE_ID@.find=Find
 @MODULE_ID@.clearResults=Clear Results
-@MODULE_ID@.filterBy=Filter By
 @MODULE_ID@.show=Show
 @MODULE_ID@.entries=entries
-@MODULE_ID@.resultsFor=Results for
 @MODULE_ID@.viewing=Viewing
 @MODULE_ID@.of=of
 @MODULE_ID@.first=first
 @MODULE_ID@.last=last
-@MODULE_ID@.showHideColumns=Show/Hide Columns
-@MODULE_ID@.showHide=Show/Hide
-@MODULE_ID@.worklist=Worklist
+
 
 @MODULE_ID@.patientId=Patient Id
 @MODULE_ID@.patientFullName=Patient Full Name
 @MODULE_ID@.referringPhysician=Referring Physician
-@MODULE_ID@.scheduler=Scheduler
-@MODULE_ID@.performingPhysician=Performing Physician
-@MODULE_ID@.readingPhysician=Reading Physician
-@MODULE_ID@.appoinmentTime=Appointment Time
 @MODULE_ID@.appoinmentDate=Order Start Date
+@MODULE_ID@.modality=Modality
+
 @MODULE_ID@.modality=Modality
 @MODULE_ID@.status=Status
 @MODULE_ID@.crossDate=Start date is more recent than end date!
-@MODULE_ID@.privilegesRequired=Privileges required: {0}
-@MODULE_ID@.mwlStatus=PACS Modality Worklist Sync Status
+@MODULE_ID@.mwlStatus=DCM4CHEE Modality Worklist Sync Status
 
-@MODULE_ID@.createOrder=Create Order
 @MODULE_ID@.patient=Patient
-@MODULE_ID@.notSpecified=Not Specified
-@MODULE_ID@.procedureRequested=Procedure Requested
 
 @MODULE_ID@.patientOverview=Patient Overview
 @MODULE_ID@.moreInfo=More Information
-@MODULE_ID@.comments=Comments
-@MODULE_ID@.preferredDate=Preferred Date
-@MODULE_ID@.bodyPart=Body Part
 @MODULE_ID@.urgency=Urgency
-@MODULE_ID@.routine=Routine
-@MODULE_ID@.urgent=Urgent/Stat
-@MODULE_ID@.contrast=Contrast
-@MODULE_ID@.withContrast=With Contrast
-@MODULE_ID@.withoutContrast=Without Contrast
 
-@MODULE_ID@.validation.patientIdNull=Enter a valid patient
-@MODULE_ID@.requiredField=Required Field
-@MODULE_ID@.noModResponse=The modality has not communicated with DICOM server
-
-@MODULE_ID@.accordingModality=According to the modality response
 @MODULE_ID@.priority=Priority
 @MODULE_ID@.scheduledStatus=Scheduled status
 @MODULE_ID@.performedStatus=Performed status
 @MODULE_ID@.minChars=Minimum 3 Chars
-@MODULE_ID@.studyPerformed=Study already performed!
 @MODULE_ID@.studyResults=Study Results
-@MODULE_ID@.xebraConfig=Xebra WADO Server initialization
-@MODULE_ID@.createAE=Create AE
-@MODULE_ID@.createSCP=Create SCP
-@MODULE_ID@.scheduled=Scheduled
-@MODULE_ID@.performed=Performed
-@MODULE_ID@.failWorklist= Failed sending order request to the PACS. Check if the PACS is online or if IP address, HL7 port have been set correctly.
-@MODULE_ID@.savedFailWorklist= Order Saved in OpenMRS but failed sending order request to the PACS. Check if the PACS is online or if IP address, HL7 port have been set correctly.
-
-# Urgency
-@MODULE_ID@.ROUTINE=Routine
-@MODULE_ID@.STAT=Emergency
-@MODULE_ID@.ON_SCHEDULED_DATE=On scheduled date
-
-# Scheduled Status
-@MODULE_ID@.SCHEDULED=SCHEDULED
-@MODULE_ID@.ARRIVED=ARRIVED
-@MODULE_ID@.READY=READY
-@MODULE_ID@.STARTED=STARTED
-@MODULE_ID@.DEPARTED=DEPARTED
-
-# Performed Status
-@MODULE_ID@.IN_PROGRESS=IN PROGRESS
-@MODULE_ID@.DISCONTINUED=DISCONTINUED
-@MODULE_ID@.COMPLETED=COMPLETED
-
-# Mwl Sync Status
-@MODULE_ID@.IN_SYNC=In Sync
-@MODULE_ID@.OUT_OF_SYNC=Out of Sync
 
 @MODULE_ID@.radiologyReportTitle=Report
 @MODULE_ID@.radiologyReportId=Id
