RAD-247: Create radiology menu entry

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 @MODULE_ID@.title=Radiology Module
+@MODULE_ID@.home.title=Radiology
 @MODULE_ID@.manageOrders=Manage Radiology Orders
 @MODULE_ID@.radiologyOrder=Radiology Order
 @MODULE_ID@.radiologyOrders=Radiology Orders
