RAD-235 Internationalize modality names
* add modality names (key=enum name) into message.properities
* use spring:message tag in jsps to access message properities key/value of
modality names

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -114,3 +114,11 @@
 @MODULE_ID@.radiologyReportComplete=Save & Complete
 @MODULE_ID@.radiologyReportResume=Resume work on Report
 @MODULE_ID@.radiologyReportShow=Show completed Report
+
+# Modality Names
+@MODULE_ID@.CR=Computed Radiography
+@MODULE_ID@.MR=Magnetic Resonance
+@MODULE_ID@.CT=Computed Tomography
+@MODULE_ID@.NM=Nuclear Medicine
+@MODULE_ID@.US=Ultrasound
+@MODULE_ID@.XA=X-Ray Angriography
