--- a/omod/src/main/resources/messages_es.properties
+++ b/omod/src/main/resources/messages_es.properties
@@ -1,12 +1,13 @@
-@MODULE_ID@.title=M&oacute;dulo de Radiolog&iacute;a
+@MODULE_ID@.title=Módulo de Radiología
+@MODULE_ID@.home.title=Radiology
 @MODULE_ID@.manageOrders=Administrar &Oacute;rdenes de Radiolog&iacute;a
-@MODULE_ID@.manageReports=Administrar Reportes de Radiolog&iacute;a
+@MODULE_ID@.radiologyOrder=Orden de radiología
+@MODULE_ID@.radiologyOrders=Ordenes de radiología
 @MODULE_ID@.addOrder=Agregar Orden de Radiolog&iacute;a
-@MODULE_ID@.configureDevices= Configurar Dispositivos
-@MODULE_ID@.imageViewer= Visor de Im&aacute;genes
+@MODULE_ID@.imagingProcedure=Imaging Procedure
 
-@MODULE_ID@.searchOrder=Buscar Orden
 @MODULE_ID@.discontinuedOrder=Orden suspendido
+@MODULE_ID@.isNotActiveOrder=This order is not active.
 @MODULE_ID@.OrderListEmpty=Actualmente, no hay Ordenes de Radiología
 @MODULE_ID@.scheduledDate=Fecha Planificado
 @MODULE_ID@.stopDate=Fecha Final
@@ -15,17 +16,12 @@
 @MODULE_ID@.endDate=Fecha Final
 @MODULE_ID@.find=Encontrar
 @MODULE_ID@.clearResults=Limpiar Resultados
-@MODULE_ID@.filterBy=Filtrar por
 @MODULE_ID@.show=Mostrar
 @MODULE_ID@.entries=entradas
-@MODULE_ID@.resultsFor=Resultados para
 @MODULE_ID@.viewing=Viendo
 @MODULE_ID@.of=de
 @MODULE_ID@.first=Primera
 @MODULE_ID@.last=Ultima
-@MODULE_ID@.showHideColumns=Mostar/Ocultar Columnas
-@MODULE_ID@.showHide=Mostar/Ocultar
-@MODULE_ID@.worklist=Lista de Trabajo
 
 @MODULE_ID@.patientId=Id del Paciente
 @MODULE_ID@.patientFullName=Nombre del Paciente
@@ -33,62 +29,62 @@
 @MODULE_ID@.scheduler=Planificador
 @MODULE_ID@.performingPhysician=médico que realiza
 @MODULE_ID@.readingPhysician=Examinador
-@MODULE_ID@.appoinmentTime=Hora de la Cita
 @MODULE_ID@.appoinmentDate=Fecha de la Cita
 @MODULE_ID@.modality=Modalidad
-@MODULE_ID@.status=Estado
-@MODULE_ID@.crossDate=La fecha final es m&aacute;s reciente que la fecha final! 
-@MODULE_ID@.privilegesRequired=Privilegios necesarios: {0}
+@MODULE_ID@.crossDate=La fecha final es m&aacute;s reciente que la fecha final\!
+@MODULE_ID@.mwlStatus=PACS Modality Worklist Sync Status
 
-@MODULE_ID@.createOrder=Crear Orden
 @MODULE_ID@.patient=Paciente
-@MODULE_ID@.notSpecified=No Especificado
-@MODULE_ID@.procedureRequested=Procedimiento
-
 @MODULE_ID@.patientOverview=Informaci&oacute;n del Paciente
 @MODULE_ID@.moreInfo=M&aacute;s Informaci&oacute;n
-@MODULE_ID@.comments=Comentarios
-@MODULE_ID@.preferredDate=Fecha Preferida
-@MODULE_ID@.bodyPart=Parte del Cuerpo
 @MODULE_ID@.urgency=Urgencia
-@MODULE_ID@.routine=Rutina
-@MODULE_ID@.urgent=Urgente
-@MODULE_ID@.contrast=Contraste
-@MODULE_ID@.withContrast=Con Contraste
-@MODULE_ID@.withoutContrast=Sin Contraste
-
-@MODULE_ID@.validation.patientIdNull=Ingrese un paciente
-@MODULE_ID@.requiredField=Campo Requerido
-@MODULE_ID@.noModResponse=La modalidad no se ha comunicado con el servidor DICOM
-
-@MODULE_ID@.accordingModality=De acuerdo a la respuesta de la modalidad
 @MODULE_ID@.priority=Prioridad
 @MODULE_ID@.scheduledStatus=Estado cita
 @MODULE_ID@.performedStatus=Estado toma
-@MODULE_ID@.previousObs=Observaciones Anteriores
 @MODULE_ID@.minChars=Minimo 3 Letras
-@MODULE_ID@.studyPerformed=Estudio ya realizado!
+@MODULE_ID@.studyPerformed=Estudio ya realizado\!
 @MODULE_ID@.studyResults=Resultados del estudio
-@MODULE_ID@.xebraConfig=Inicializaci&oacute;n del servidor WADO (Xebra)
-@MODULE_ID@.createAE=Crear AE
-@MODULE_ID@.createSCP=Crear SCP
-@MODULE_ID@.scheduled=Programada
-@MODULE_ID@.performed=Realizada
+@MODULE_ID@.failWorklist= Failed sending order request to the PACS. Check if the PACS is online or if IP address, HL7 port have been set correctly.
+@MODULE_ID@.savedFailWorklist= Order Saved in OpenMRS but failed sending order request to the PACS. Check if the PACS is online or if IP address, HL7 port have been set correctly.
 
-# Statuses
+# Urgency
+@MODULE_ID@.ROUTINE=Routine
+@MODULE_ID@.STAT=Emergency
+@MODULE_ID@.ON_SCHEDULED_DATE=On scheduled date
+
+# Scheduled Status
 @MODULE_ID@.SCHEDULED=PROGRAMADA
 @MODULE_ID@.ARRIVED=ARRIVED
-@MODULE_ID@.READY=READY 
+@MODULE_ID@.READY=READY
 @MODULE_ID@.STARTED=STARTED
 @MODULE_ID@.DEPARTED=DEPARTED
 
+# Performed Status
 @MODULE_ID@.IN_PROGRESS=EN PROGRESO
 @MODULE_ID@.DISCONTINUED=SUSPENDIDO
 @MODULE_ID@.COMPLETED=TERMINADO
 
-# Priorities
-@MODULE_ID@.STAT=URGENTE
-@MODULE_ID@.HIGH=ALTA
-@MODULE_ID@.ROUTINE=RUTINA
-@MODULE_ID@.MEDIUM=MEDIA
-@MODULE_ID@.LOW=BAJA
+# Mwl Sync Status
+@MODULE_ID@.IN_SYNC=In Sync
+@MODULE_ID@.OUT_OF_SYNC=Out of Sync
+
+@MODULE_ID@.radiologyReportTitle=Reporte
+@MODULE_ID@.radiologyReportId=Id
+@MODULE_ID@.reportStatus=Estado
+@MODULE_ID@.radiologyReportDiagnosis=Diagnóstico
+@MODULE_ID@.radiologyReportProvider=Results Interpreter
+@MODULE_ID@.radiologyReportDate=Completion Date
+@MODULE_ID@.radiologyReportClaim=Claim Report
+@MODULE_ID@.radiologyReportUnclaim=Unclaim
+@MODULE_ID@.radiologyReportSave=Guardar como borrador
+@MODULE_ID@.radiologyReportComplete=Guardar y finalizar
+@MODULE_ID@.radiologyReportResume=Resume work on Report
+@MODULE_ID@.radiologyReportShow=Show completed Report
+
+# Modality Names
+@MODULE_ID@.CR=Computed Radiography
+@MODULE_ID@.MR=Magnetic Resonance
+@MODULE_ID@.CT=Computed Tomography
+@MODULE_ID@.NM=Nuclear Medicine
+@MODULE_ID@.US=Ultrasound
+@MODULE_ID@.XA=X-Ray Angriography
