--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -5,6 +5,7 @@
 @MODULE_ID@.radiologyOrders=Radiology Orders
 @MODULE_ID@.addOrder=Add Radiology Order
 @MODULE_ID@.imagingProcedure=Imaging Procedure
+@MODULE_ID@.radiologyTabs.orders=Orders
 
 @MODULE_ID@.discontinuedOrder=Discontinued Order
 @MODULE_ID@.isNotActiveOrder=This order is not active.
