RAD-272: Providing suport for template import
* added parser to parse mrrt template file
* added test with real life mrrt template
* implemented templates tab in UI with ability to import templates and search
by title
* added privileges specific to mrrt templates
* added REST services
** added MrrtReportTemplateResource
** added MrrtReportTemplateSearchHandler
* added GP for templates folder

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -8,6 +8,10 @@
 @MODULE_ID@.addOrder=Add Radiology Order
 @MODULE_ID@.imagingProcedure=Imaging Procedure
 
+@MODULE_ID@.report.template.search.title=Title
+@MODULE_ID@.report.template.imported=Report template imported
+@MODULE_ID@.report.template.not.imported.empty=Failed to import report template because it was empty
+
 @MODULE_ID@.discontinuedOrder=Discontinued Order
 @MODULE_ID@.isNotActiveOrder=This order is not active.
 @MODULE_ID@.OrderListEmpty=Currently, there are no Radiology Orders
@@ -20,7 +24,6 @@
 
 @MODULE_ID@.dashboard.tabs.filters.find=Find
 @MODULE_ID@.dashboard.tabs.filters.clearFilters=Clear Filters
-
 @MODULE_ID@.dashboard.tabs.orders=Orders
 @MODULE_ID@.dashboard.tabs.orders.filters.patient=Patient
 
@@ -31,6 +34,14 @@
 @MODULE_ID@.dashboard.tabs.reports.filters.status=Status
 @MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter=Principal Results Interpreter
 @MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter.title=Proposals after two characters
+
+@MODULE_ID@.dashboard.tabs.reportTemplates=Report Templates
+@MODULE_ID@.dashboard.tabs.reportTemplates.filters.title=Title
+@MODULE_ID@.dashboard.tabs.reportTemplates.boxheader=Report Templates
+
+@MODULE_ID@.reportTemplates.import.popup.boxheader=Import Report Template
+@MODULE_ID@.reportTemplates.import.popup.upload=Upload
+@MODULE_ID@.reportTemplates.import.popup.button=Import Report Template
 
 @MODULE_ID@.datatables.noresult=No Result
 @MODULE_ID@.datatables.loading=Loading...
@@ -64,6 +75,13 @@
 @MODULE_ID@.datatables.column.report.createdBy=Created By
 
 @MODULE_ID@.datatables.column.action=Action
+@MODULE_ID@.datatables.column.report.template.id=Id
+@MODULE_ID@.datatables.column.report.template.title=Title
+@MODULE_ID@.datatables.column.report.template.creator=Creator
+@MODULE_ID@.datatables.column.report.template.publisher=Publisher
+@MODULE_ID@.datatables.column.report.template.type=Type
+@MODULE_ID@.datatables.column.report.template.description=Description
+@MODULE_ID@.datatables.column.report.template.rights=Rights
 
 @MODULE_ID@.report.boxheader=Reports
 
@@ -81,6 +99,9 @@
 @MODULE_ID@.radiologyOrder.orderReason=Reason (Coded)
 @MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
 @MODULE_ID@.radiologyOrder.clinicalHistory=Clinical History
+
+@MODULE_ID@.MrrtReportTemplate.imported=Report template imported
+@MODULE_ID@.MrrtReportTemplate.not.imported.empty=Failed to import report template because it was empty
 
 @MODULE_ID@.patientId=Patient Id
 @MODULE_ID@.patientFullName=Patient Full Name
