--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -9,6 +9,12 @@
 @MODULE_ID@.addOrder=Add Radiology Order
 @MODULE_ID@.imagingProcedure=Imaging Procedure
 
+@MODULE_ID@.radiologyTabs.reportTemplates=Report Templates
+@MODULE_ID@.report.template.specialty=Specialty
+@MODULE_ID@.report.template.organization=Organization
+@MODULE_ID@.report.template.addTemplate=Add Report Template
+@MODULE_ID@.reportTemplates=Radiology Report Templates
+
 @MODULE_ID@.discontinuedOrder=Discontinued Order
 @MODULE_ID@.isNotActiveOrder=This order is not active.
 @MODULE_ID@.OrderListEmpty=Currently, there are no Radiology Orders
