RAD-280 Add RESTful API for RadiologyOrders
add first REST API for the module handling queries for a single RadiologyOrder
and RadiologyOrder's by Patient. Consume the new REST API via ajax in the
datatables

* add dependency for rest
* add REST resource for RadiologyOrder
* add main controller for REST
* add SearchHandler handling queries for RadiologyOrder by patient
* add test-hibernate.cfg.xml and TestingApplicationContext.xml to omod for component tests
* add dataset xmls for component tests
* use the REST API via ajax in the datatables
* clean the radiology order list pages from all filters except patient
* disable datatables order, search in tables (needs to come from our API)
* reuse radiologyOrdersTab portlet in the manage section. reduces duplication
* restructure js/css files in webapp/resources/scripts like core/reporting does
* use mouseup and keyup events in datatables to reduce stress on backend
* add includeDatatables/WithDefaults.jsp so it can be reused
* add own tag PatientField which is used for the patient filter returning its
UUID. taken as parameter for the REST API.
* externalize translation of datatables into jsp
* remove orderSearch.jsp and its code in PortletsController+PortletsControllerTest
* use momentjs-with-locales.js library for date/time/datetime formatting in
datatables
* remove radiologyOrderList.js
* create own message.properties for datatables
* use pageContext.request.contextPath in jsps instead of constructing paths
myself
* remove paging buttons in datatables since paging not yet fully supported
* remove sortNumbers since unused
* remove patientOverview portlet and its moreInfo.js since allergie part is not found in legacyui
* rearrange jsps into orders/reports folders, remove jsps from /portlets which
are no real portlets
* update NOTICE file

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -10,6 +10,7 @@
 @MODULE_ID@.discontinuedOrder=Discontinued Order
 @MODULE_ID@.isNotActiveOrder=This order is not active.
 @MODULE_ID@.OrderListEmpty=Currently, there are no Radiology Orders
+@MODULE_ID@.orderNumber=Order Number
 @MODULE_ID@.scheduledDate=Scheduled Date
 @MODULE_ID@.stopDate=Stop Date
 @MODULE_ID@.dateActivated=Date Activated
@@ -17,12 +18,25 @@
 @MODULE_ID@.endDate=End Date
 @MODULE_ID@.find=Find
 @MODULE_ID@.clearResults=Clear Results
-@MODULE_ID@.show=Show
-@MODULE_ID@.entries=entries
-@MODULE_ID@.viewing=Viewing
-@MODULE_ID@.of=of
-@MODULE_ID@.first=first
-@MODULE_ID@.last=last
+
+@MODULE_ID@.datatables.noresult=No Result
+@MODULE_ID@.datatables.loading=Loading...
+@MODULE_ID@.datatables.show=Show
+@MODULE_ID@.datatables.viewing=Viewing
+@MODULE_ID@.datatables.entries=entries
+@MODULE_ID@.datatables.of=of
+@MODULE_ID@.datatables.previous=Previous
+@MODULE_ID@.datatables.first=First
+@MODULE_ID@.datatables.next=Next
+@MODULE_ID@.datatables.last=Last
+
+@MODULE_ID@.datatables.column.orderNumber=Order Number
+@MODULE_ID@.datatables.column.patient=Patient
+@MODULE_ID@.datatables.column.priority=Priority
+@MODULE_ID@.datatables.column.imagingProcedure=Imaging Procedure
+@MODULE_ID@.datatables.column.referringPhysician=Referring Physician
+@MODULE_ID@.datatables.column.scheduledDate=Scheduled Date
+@MODULE_ID@.datatables.column.dateActivated=Date Activated
 
 @MODULE_ID@.patientId=Patient Id
 @MODULE_ID@.patientFullName=Patient Full Name
