fix missing property scheduledDate in RadiologyOrderResource

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -10,6 +10,7 @@
 @MODULE_ID@.discontinuedOrder=Discontinued Order
 @MODULE_ID@.isNotActiveOrder=This order is not active.
 @MODULE_ID@.OrderListEmpty=Currently, there are no Radiology Orders
+@MODULE_ID@.orderNumber=Order Number
 @MODULE_ID@.scheduledDate=Scheduled Date
 @MODULE_ID@.stopDate=Stop Date
 @MODULE_ID@.dateActivated=Date Activated
