create own message.properties for datatables

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -18,12 +18,25 @@
 @MODULE_ID@.endDate=End Date
 @MODULE_ID@.find=Find
 @MODULE_ID@.clearResults=Clear Results
-@MODULE_ID@.show=Show
-@MODULE_ID@.entries=entries
-@MODULE_ID@.viewing=Viewing
-@MODULE_ID@.of=of
-@MODULE_ID@.first=first
-@MODULE_ID@.last=last
+
+@MODULE_ID@.datatables.noresult=No Result
+@MODULE_ID@.datatables.loading=Loading...
+@MODULE_ID@.datatables.show=Show
+@MODULE_ID@.datatables.viewing=Viewing
+@MODULE_ID@.datatables.entries=entries
+@MODULE_ID@.datatables.of=of
+@MODULE_ID@.datatables.previous=previous
+@MODULE_ID@.datatables.first=first
+@MODULE_ID@.datatables.next=next
+@MODULE_ID@.datatables.last=last
+
+@MODULE_ID@.datatables.column.orderNumber=Order Number
+@MODULE_ID@.datatables.column.patient=Patient
+@MODULE_ID@.datatables.column.priority=Priority
+@MODULE_ID@.datatables.column.imagingProcedure=Imaging Procedure
+@MODULE_ID@.datatables.column.referringPhysician=Referring Physician
+@MODULE_ID@.datatables.column.scheduledDate=Scheduled Date
+@MODULE_ID@.datatables.column.dateActivated=Date Activated
 
 @MODULE_ID@.patientId=Patient Id
 @MODULE_ID@.patientFullName=Patient Full Name
