fix some message properties, disable datatables info and only use Previous/Next buttons

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -25,10 +25,10 @@
 @MODULE_ID@.datatables.viewing=Viewing
 @MODULE_ID@.datatables.entries=entries
 @MODULE_ID@.datatables.of=of
-@MODULE_ID@.datatables.previous=previous
-@MODULE_ID@.datatables.first=first
-@MODULE_ID@.datatables.next=next
-@MODULE_ID@.datatables.last=last
+@MODULE_ID@.datatables.previous=Previous
+@MODULE_ID@.datatables.first=First
+@MODULE_ID@.datatables.next=Next
+@MODULE_ID@.datatables.last=Last
 
 @MODULE_ID@.datatables.column.orderNumber=Order Number
 @MODULE_ID@.datatables.column.patient=Patient
