implemented templates tab with popup

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -9,6 +9,22 @@
 @MODULE_ID@.addOrder=Add Radiology Order
 @MODULE_ID@.imagingProcedure=Imaging Procedure
 
+@MODULE_ID@.radiologyTabs.orders=Orders
+@MODULE_ID@.radiologyTabs.reportTemplates=Report Templates
+@MODULE_ID@.report.templates.AddReportTemplates=Add Report Templates
+@MODULE_ID@.report.templates.Upload=Upload
+@MODULE_ID@.report.templates.importTemplate=Import Template
+@MODULE_ID@.radiologyReportTemplates=Radiology Report Templates
+@MODULE_ID@.report.template.specialty=Specialty
+@MODULE_ID@.report.template.organization=Organization
+@MODULE_ID@.report.template.title=Title
+@MODULE_ID@.report.template.templateId=Template Id
+@MODULE_ID@.report.template.creator=Creator
+@MODULE_ID@.report.template.publisher=Publisher
+@MODULE_ID@.report.template.type=Type
+@MODULE_ID@.report.template.description=Description
+@MODULE_ID@.report.template.rights=Rights
+
 @MODULE_ID@.radiologyTabs.reportTemplates=Report Templates
 @MODULE_ID@.report.template.specialty=Specialty
 @MODULE_ID@.report.template.organization=Organization
