RAD-286 Add order reason to order entry page
* add order reason to radiologyOrderForm
* add childrows to datatables radiology orders with orderReason/NonCoded and
instruction

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -37,6 +37,12 @@
 @MODULE_ID@.datatables.column.referringPhysician=Referring Physician
 @MODULE_ID@.datatables.column.scheduledDate=Scheduled Date
 @MODULE_ID@.datatables.column.dateActivated=Date Activated
+@MODULE_ID@.datatables.column.orderReason=Reason (Coded)
+@MODULE_ID@.datatables.column.orderReasonNonCoded=Reason (Free Text)
+@MODULE_ID@.datatables.column.instructions=Instructions
+
+@MODULE_ID@.radiologyOrder.orderReason=Reason (Coded)
+@MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
 
 @MODULE_ID@.patientId=Patient Id
 @MODULE_ID@.patientFullName=Patient Full Name
