--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -41,10 +41,12 @@
 @MODULE_ID@.datatables.column.dateActivated=Date Activated
 @MODULE_ID@.datatables.column.orderReason=Reason (Coded)
 @MODULE_ID@.datatables.column.orderReasonNonCoded=Reason (Free Text)
+@MODULE_ID@.datatables.column.clinicalHistory=Clinical History
 @MODULE_ID@.datatables.column.instructions=Instructions
 
 @MODULE_ID@.radiologyOrder.orderReason=Reason (Coded)
 @MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
+@MODULE_ID@.radiologyOrder.clinicalHistory=Clinical History
 
 @MODULE_ID@.patientId=Patient Id
 @MODULE_ID@.patientFullName=Patient Full Name
