--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -9,24 +9,14 @@
 @MODULE_ID@.addOrder=Add Radiology Order
 @MODULE_ID@.imagingProcedure=Imaging Procedure
 
-@MODULE_ID@.radiologyTabs.orders=Orders
-@MODULE_ID@.radiologyTabs.reportTemplates=Report Templates
-@MODULE_ID@.report.templates.AddReportTemplates=Add Report Templates
-@MODULE_ID@.report.templates.Upload=Upload
-@MODULE_ID@.report.templates.importTemplate=Import Template
+@MODULE_ID@.dashboard.tabs.reportTemplates=Report Templates
 @MODULE_ID@.radiologyReportTemplates=Radiology Report Templates
-@MODULE_ID@.report.template.specialty=Specialty
-@MODULE_ID@.report.template.organization=Organization
-@MODULE_ID@.report.template.title=Title
-@MODULE_ID@.report.template.templateId=Template Id
-@MODULE_ID@.report.template.creator=Creator
-@MODULE_ID@.report.template.publisher=Publisher
-@MODULE_ID@.report.template.type=Type
-@MODULE_ID@.report.template.description=Description
-@MODULE_ID@.report.template.rights=Rights
 
+@MODULE_ID@.report.template.AddReportTemplate=Add Report Template
+@MODULE_ID@.report.template.Upload=Upload
+@MODULE_ID@.report.template.title=Title
+@MODULE_ID@.report.template.importTemplate=Import Template
 @MODULE_ID@.report.template.addTemplate=Add Report Template
-@MODULE_ID@.reportTemplates=Radiology Report Templates
 
 @MODULE_ID@.discontinuedOrder=Discontinued Order
 @MODULE_ID@.isNotActiveOrder=This order is not active.
@@ -61,6 +51,13 @@
 @MODULE_ID@.datatables.column.orderReason=Reason (Coded)
 @MODULE_ID@.datatables.column.orderReasonNonCoded=Reason (Free Text)
 @MODULE_ID@.datatables.column.instructions=Instructions
+@MODULE_ID@.datatables.column.title=Title
+@MODULE_ID@.datatables.column.templateId=Template Id
+@MODULE_ID@.datatables.column.creator=Creator
+@MODULE_ID@.datatables.column.publisher=Publisher
+@MODULE_ID@.datatables.column.type=Type
+@MODULE_ID@.datatables.column.description=Description
+@MODULE_ID@.datatables.column.rights=Rights
 
 @MODULE_ID@.radiologyOrder.orderReason=Reason (Coded)
 @MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
