RAD-136 Create a list with radiology reports
* add report tab into radiology dashboard
* add new entries in message.properties
* ensure no duplicate ids exist in radiology dashboard document with ordersTab and reportsTab
included

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -2,6 +2,7 @@
 @MODULE_ID@.gutterlist.title=Radiology
 @MODULE_ID@.dashboard.title=Radiology
 @MODULE_ID@.dashboard.tabs.orders=Orders
+@MODULE_ID@.dashboard.tabs.reports=Reports
 @MODULE_ID@.patientDashboardForm.tabs.radiology=Radiology
 @MODULE_ID@.manageOrders=Manage Radiology Orders
 @MODULE_ID@.radiologyOrder=Radiology Order
@@ -43,6 +44,20 @@
 @MODULE_ID@.datatables.column.orderReasonNonCoded=Reason (Free Text)
 @MODULE_ID@.datatables.column.clinicalHistory=Clinical History
 @MODULE_ID@.datatables.column.instructions=Instructions
+
+@MODULE_ID@.datatables.column.report.view=View
+@MODULE_ID@.datatables.column.report.order=Radiology Order
+@MODULE_ID@.datatables.column.report.date=Date
+@MODULE_ID@.datatables.column.report.principalResultsInterpreter=Principal Results Interpreter
+@MODULE_ID@.datatables.column.report.status=Status
+
+@MODULE_ID@.report.boxheader=Reports
+
+@MODULE_ID@.report.principalResultsInterpreter=Principal Results Interpreter
+
+@MODULE_ID@.report.status.CLAIMED=CLAIMED
+@MODULE_ID@.report.status.COMPLETED=COMPLETED
+@MODULE_ID@.report.status.DISCONTINUED=DISCONTINUED
 
 @MODULE_ID@.radiologyOrder.orderReason=Reason (Coded)
 @MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
