RAD-316 Add daterangepicker to filter reports Add daterangepicker so a radiologist can filter the list of reports by from, to date
* add daterangepicker to radiologyReportsTab.jsp
* add labels to messages.properties
* add includeScripts.jsp

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -1,8 +1,6 @@
 @MODULE_ID@.title=Radiology Module
 @MODULE_ID@.gutterlist.title=Radiology
 @MODULE_ID@.dashboard.title=Radiology
-@MODULE_ID@.dashboard.tabs.orders=Orders
-@MODULE_ID@.dashboard.tabs.reports=Reports
 @MODULE_ID@.patientDashboardForm.tabs.radiology=Radiology
 @MODULE_ID@.manageOrders=Manage Radiology Orders
 @MODULE_ID@.radiologyOrder=Radiology Order
@@ -19,8 +17,19 @@
 @MODULE_ID@.dateActivated=Date Activated
 @MODULE_ID@.startDate=Start Date
 @MODULE_ID@.endDate=End Date
-@MODULE_ID@.find=Find
-@MODULE_ID@.clearResults=Clear Results
+
+@MODULE_ID@.dashboard.tabs.filters.find=Find
+@MODULE_ID@.dashboard.tabs.filters.clearFilters=Clear Filters
+
+@MODULE_ID@.dashboard.tabs.orders=Orders
+@MODULE_ID@.dashboard.tabs.orders.filters.patient=Patient
+
+
+@MODULE_ID@.dashboard.tabs.reports=Reports
+@MODULE_ID@.dashboard.tabs.reports.filters.date=Date
+@MODULE_ID@.dashboard.tabs.reports.filters.date.from=from
+@MODULE_ID@.dashboard.tabs.reports.filters.date.to=to
+
 
 @MODULE_ID@.datatables.noresult=No Result
 @MODULE_ID@.datatables.loading=Loading...
