RAD-136 Fix bug with null provider and show status
* when principalResultsInterpreter of a report was null due to the report
being a draft, then the list wouldnt load
* status column was hidden
* show date created and creator

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -50,6 +50,8 @@
 @MODULE_ID@.datatables.column.report.date=Date
 @MODULE_ID@.datatables.column.report.principalResultsInterpreter=Principal Results Interpreter
 @MODULE_ID@.datatables.column.report.status=Status
+@MODULE_ID@.datatables.column.report.dateCreated=Date created
+@MODULE_ID@.datatables.column.report.createdBy=Created By
 
 @MODULE_ID@.report.boxheader=Reports
 
