RAD-187 Add alert when unclaiming a report
* show jquery-ui-dialog when unclaiming a report with text

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -24,7 +24,6 @@
 @MODULE_ID@.dashboard.tabs.orders=Orders
 @MODULE_ID@.dashboard.tabs.orders.filters.patient=Patient
 
-
 @MODULE_ID@.dashboard.tabs.reports=Reports
 @MODULE_ID@.dashboard.tabs.reports.filters.date=Date
 @MODULE_ID@.dashboard.tabs.reports.filters.date.from=from
@@ -69,6 +68,11 @@
 @MODULE_ID@.report.status.CLAIMED=CLAIMED
 @MODULE_ID@.report.status.COMPLETED=COMPLETED
 @MODULE_ID@.report.status.DISCONTINUED=DISCONTINUED
+
+@MODULE_ID@.report.form.unclaim.dialog.title=Unclaim Report
+@MODULE_ID@.report.form.unclaim.dialog.message=Are you sure you want to unclaim this report?
+@MODULE_ID@.report.form.unclaim.dialog.button.ok=Ok
+@MODULE_ID@.report.form.unclaim.dialog.button.cancel=Cancel
 
 @MODULE_ID@.radiologyOrder.orderReason=Reason (Coded)
 @MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
