RAD-315 REST search for RadiologyReport by status
* modify dao method
* add status parameter to RadiologyReportSearchCriteria
* add tests for RadiologyReportSearchCriteria
* add tests to RadiologyReportServiceComponentTest
* add search paramter to RadiologyReportSearchHandler
* add tests for RadiologyReportSearchHandler
* add entries to messages.properties
* add select-item for status to radiologyReportsTab.jsp

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -28,7 +28,7 @@
 @MODULE_ID@.dashboard.tabs.reports.filters.date=Date
 @MODULE_ID@.dashboard.tabs.reports.filters.date.from=from
 @MODULE_ID@.dashboard.tabs.reports.filters.date.to=to
-
+@MODULE_ID@.dashboard.tabs.reports.filters.status=Status
 
 @MODULE_ID@.datatables.noresult=No Result
 @MODULE_ID@.datatables.loading=Loading...
@@ -65,14 +65,14 @@
 
 @MODULE_ID@.report.principalResultsInterpreter=Principal Results Interpreter
 
-@MODULE_ID@.report.status.CLAIMED=CLAIMED
-@MODULE_ID@.report.status.COMPLETED=COMPLETED
-@MODULE_ID@.report.status.DISCONTINUED=DISCONTINUED
-
 @MODULE_ID@.report.form.unclaim.dialog.title=Unclaim Report
 @MODULE_ID@.report.form.unclaim.dialog.message=Are you sure you want to unclaim this report?
 @MODULE_ID@.report.form.unclaim.dialog.button.ok=Ok
 @MODULE_ID@.report.form.unclaim.dialog.button.cancel=Cancel
+
+@MODULE_ID@.report.status.COMPLETED=Completed
+@MODULE_ID@.report.status.CLAIMED=Claimed
+@MODULE_ID@.report.status.DISCONTINUED=Discontinued
 
 @MODULE_ID@.radiologyOrder.orderReason=Reason (Coded)
 @MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
