RAD-327 Find report by principalResultsInterpreter As a radiologist I want to find a report by its principal results interpreter
* add providerField.tag
* add new tag to radiologyReportsTab.jsp and add new parameter to ajax
 request
* add entry to messages.properties

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -29,6 +29,8 @@
 @MODULE_ID@.dashboard.tabs.reports.filters.date.from=from
 @MODULE_ID@.dashboard.tabs.reports.filters.date.to=to
 @MODULE_ID@.dashboard.tabs.reports.filters.status=Status
+@MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter=Principal Results Interpreter
+@MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter.title=Proposals after two characters
 
 @MODULE_ID@.datatables.noresult=No Result
 @MODULE_ID@.datatables.loading=Loading...
