--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -43,17 +43,17 @@
 @MODULE_ID@.datatables.next=Next
 @MODULE_ID@.datatables.last=Last
 
-@MODULE_ID@.datatables.column.orderNumber=Order Number
-@MODULE_ID@.datatables.column.patient=Patient
-@MODULE_ID@.datatables.column.priority=Priority
-@MODULE_ID@.datatables.column.imagingProcedure=Imaging Procedure
-@MODULE_ID@.datatables.column.referringPhysician=Referring Physician
-@MODULE_ID@.datatables.column.scheduledDate=Scheduled Date
-@MODULE_ID@.datatables.column.dateActivated=Date Activated
-@MODULE_ID@.datatables.column.orderReason=Reason (Coded)
-@MODULE_ID@.datatables.column.orderReasonNonCoded=Reason (Free Text)
-@MODULE_ID@.datatables.column.clinicalHistory=Clinical History
-@MODULE_ID@.datatables.column.instructions=Instructions
+@MODULE_ID@.datatables.column.order.orderNumber=Order Number
+@MODULE_ID@.datatables.column.order.patient=Patient
+@MODULE_ID@.datatables.column.order.priority=Priority
+@MODULE_ID@.datatables.column.order.imagingProcedure=Imaging Procedure
+@MODULE_ID@.datatables.column.order.referringPhysician=Referring Physician
+@MODULE_ID@.datatables.column.order.scheduledDate=Scheduled Date
+@MODULE_ID@.datatables.column.order.dateActivated=Date Activated
+@MODULE_ID@.datatables.column.order.reason=Reason (Coded)
+@MODULE_ID@.datatables.column.order.reasonNonCoded=Reason (Free Text)
+@MODULE_ID@.datatables.column.order.clinicalHistory=Clinical History
+@MODULE_ID@.datatables.column.order.instructions=Instructions
 
 @MODULE_ID@.datatables.column.report.view=View
 @MODULE_ID@.datatables.column.report.order=Radiology Order
@@ -62,6 +62,8 @@
 @MODULE_ID@.datatables.column.report.status=Status
 @MODULE_ID@.datatables.column.report.dateCreated=Date created
 @MODULE_ID@.datatables.column.report.createdBy=Created By
+
+@MODULE_ID@.datatables.column.action=Action
 
 @MODULE_ID@.report.boxheader=Reports
 
