--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -1,8 +1,8 @@
 @MODULE_ID@.title=Radiology Module
 @MODULE_ID@.gutterlist.title=Radiology
+@MODULE_ID@.administrationSection.links.dashboard=Radiology Dashboard
 @MODULE_ID@.dashboard.title=Radiology
 @MODULE_ID@.patientDashboardForm.tabs.radiology=Radiology
-@MODULE_ID@.manageOrders=Manage Radiology Orders
 @MODULE_ID@.radiologyOrder=Radiology Order
 @MODULE_ID@.radiologyOrders=Radiology Orders
 @MODULE_ID@.addOrder=Add Radiology Order
@@ -11,6 +11,9 @@
 @MODULE_ID@.report.template.search.title=Title
 @MODULE_ID@.report.template.imported=Report template imported
 @MODULE_ID@.report.template.not.imported.empty=Failed to import report template because it was empty
+
+@MODULE_ID@.localHeader.links.patientDashboard=Patient Dashboard
+@MODULE_ID@.localHeader.links.radiologyOrder=Radiology Order
 
 @MODULE_ID@.discontinuedOrder=Discontinued Order
 @MODULE_ID@.isNotActiveOrder=This order is not active.
